--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,31 @@ Thumbs.db
 *.gcda
 *.gcov
 coverage/
+
+# === Environment Variables ===
+.env
+.env.local
+.env.*.local
+secrets/
+config/local.*
+
+# === Docker ===
+*.env.docker
+docker-compose.override.yml
+
+# === OS specific ===
+*.pid
+*.seed
+*.pid.lock
+
+# === Logs ===
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+
+# === Temporary files ===
+tmp/
+temp/
